--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:19-alpine
 
 WORKDIR /usr/src/app
-# because of docker compose without cntext, you have to start from the relative of the docker compose path
+# because of docker compose without context, you have to start from the relative of the docker compose path
 COPY ./client .
 
 RUN yarn install
