--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "react-icons": "^4.8.0"
+    "@mui/material": "^5.13.0",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "react-icons": "^4.8.0",
+    "styled-components": "^6.0.0-rc.1"
   }
 }
