--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon -L"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^4.14.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
