--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/styled-engine-sc": "^5.12.0",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
+    "reactstrap": "^9.1.10",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
