#19 Add database for docker and prisma

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,6 +6,10 @@ COPY ./server .
 
 ENV PATH = "/app/node_modules/.bin:${PATH}"
 
+
 RUN yarn install
+RUN apk add --no-cache bash
 
 CMD ["yarn", "run", "dev"]
+
+
