--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,7 +1,9 @@
 FROM postgres:15
 
 ENV POSTGRES_PASSWORD=password
-ENV POSTGRES_DB=database
+ENV POSTGRES_DB=postgres
+ENV POSTGRES_USER=postgres
+
 
 CMD ["postgres"]
 
