--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon -L"
   },
   "dependencies": {
+    "@prisma/client": "^4.14.1",
     "express": "^4.18.2",
     "prisma": "^4.14.1"
   },
