--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,14 +1,14 @@
 FROM node:19-alpine 
 
-WORKDIR /usr/src/app/server
+WORKDIR /usr/src/app
+
+RUN apk add --no-cache bash
+RUN apk add --no-cache postgresql-client
 
 COPY ./server . 
-
-ENV PATH = "/app/node_modules/.bin:${PATH}"
-
+COPY ./server/package.json .
 
 RUN yarn install
-RUN apk add --no-cache bash
 
 CMD ["yarn", "run", "dev"]
 
