Add Transaction api

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,7 +1,7 @@
 FROM postgres:15
 
 ENV POSTGRES_PASSWORD=password
-ENV POSTGRES_DB=postgres
+ENV POSTGRES_DB=finance 
 ENV POSTGRES_USER=postgres
 
 
