--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,12 @@
     "@mui/x-date-pickers": "^6.5.0",
     "@mui/x-date-pickers-pro": "^6.6.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-daterangepicker": "^3.1.0",
     "dayjs": "^1.11.7",
+    "jquery": "^3.7.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap-daterangepicker": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
