--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "prisma": "^4.14.1"
   },
