--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,14 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.0",
     "@mui/styled-engine-sc": "^5.12.0",
-    "@mui/x-date-pickers": "^6.5.0",
-    "@mui/x-date-pickers-pro": "^6.6.0",
+    "@mui/system": "^5.13.2",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "bootstrap-daterangepicker": "^3.1.0",
-    "dayjs": "^1.11.7",
+    "dayjs": "^1.11.8",
     "jquery": "^3.7.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -39,6 +40,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2"
+    "vite": "^4.3.9"
   }
 }
