--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.3"
+    "axios": "^1.4.0"
   }
 }
