--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-daterangepicker": "^3.1.0",
     "dayjs": "^1.11.8",
+    "firebase": "^9.22.2",
     "jquery": "^3.7.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -30,7 +31,8 @@
     "react-router-dom": "^6.11.1",
     "reactjs-popup": "^2.0.5",
     "reactstrap": "^9.1.10",
-    "styled-components": "^6.0.0-rc.1"
+    "styled-components": "^6.0.0-rc.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
