--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
