--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
     "reactjs-popup": "^2.0.5",
