--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.3"
+    "@mui/material": "^5.13.3",
+    "uuid": "^9.0.0"
   }
 }
