--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "@prisma/client": "^4.14.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "prisma": "^4.14.1"
+    "prisma": "^4.14.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
