--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "firebase": "^9.23.0",
     "jquery": "^3.7.0",
     "moment": "^2.29.4",
+    "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
     "react-bootstrap-daterangepicker": "^8.0.0",
     "react-chatbot-kit": "^2.1.2",
