Fix cors configs

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-DB_URL = postgresql://postgres:password@postgresql:5432/finance
+DATABASE_URL = postgresql://postgres:password@postgresql:5432/finance
