--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,11 @@
     "@mui/material": "^5.13.0",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/system": "^5.13.2",
+    "@mui/x-date-pickers": "^6.10.2",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "bootstrap-daterangepicker": "^3.1.0",
-    "dayjs": "^1.11.8",
+    "dayjs": "^1.11.9",
     "firebase": "^9.23.0",
     "jquery": "^3.7.0",
     "moment": "^2.29.4",
