--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 DATABASE_URL = postgresql://postgres:password@postgresql:5432/finance
+CHATGPT_SECRET_KEY = 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
