--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/system": "^5.13.2",
     "@mui/x-date-pickers": "^6.10.2",
+    "@tailwindcss/forms": "^0.5.5",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "bootstrap-daterangepicker": "^3.1.0",
@@ -46,11 +47,14 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.28",
     "serve": "^14.2.0",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.3.9"
   }
 }
