--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -19,6 +20,7 @@
     "express-timeout": "^0.2.1",
     "helmet": "^7.0.0",
     "http-status": "^1.6.2",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^3.3.0",
     "prisma": "^4.14.1",
     "zod": "^3.21.4"
